go-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: az-otus-homework-go-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: az-otus-homework-go
  template:
    metadata:
      labels:
        app: az-otus-homework-go
    spec:
      containers:
        - name: az-otus-homework-go
          image: agzhur/az-otus-homework-go:1.2
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
