go-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: az-otus-homework-go-service
spec:
  selector:
    app: az-otus-homework-go
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
