go-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: az-otus-homework-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: az-otus-homework-go-service
              servicePort: 8000
